Removed extra results_dict things

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +432,76 @@
       "Name: count, dtype: int64\n"
      ]
     },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>test_score</th>\n",
+       "      <th>train_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dummy</th>\n",
+       "      <td>0.004 (+/- 0.004)</td>\n",
+       "      <td>0.002 (+/- 0.004)</td>\n",
+       "      <td>0.616 (+/- 0.003)</td>\n",
+       "      <td>0.616 (+/- 0.001)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                fit_time         score_time         test_score  \\\n",
+       "dummy  0.004 (+/- 0.004)  0.002 (+/- 0.004)  0.616 (+/- 0.003)   \n",
+       "\n",
+       "             train_score  \n",
+       "dummy  0.616 (+/- 0.001)  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_dict = {}\n",
+    "\n",
+    "survived = train_df.value_counts(\"Survived\")\n",
+    "print(survived)\n",
+    "\n",
+    "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
+    "results_dict[\"dummy\"] = mean_std_cross_val_scores(\n",
+    "    dummy, X, y, return_train_score=True\n",
+    ")\n",
+    "pd.DataFrame(results_dict).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -535,23 +605,12 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_dict = {}\n",
-    "\n",
-    "survived = train_df.value_counts(\"Survived\")\n",
-    "print(survived)\n",
-    "\n",
-    "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
-    "results_dict[\"dummy\"] = mean_std_cross_val_scores(\n",
-    "    dummy, X, y, return_train_score=True\n",
-    ")\n",
-    "pd.DataFrame(results_dict).T\n",
-    "\n",
     "dummy_clf = DummyClassifier(strategy=\"most_frequent\")\n",
     "dummy_clf.fit(X, y)\n",
     "predicted = dummy_clf.predict(test_df)\n",
@@ -589,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -661,31 +720,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>dummy</th>\n",
-       "      <td>0.002 (+/- 0.004)</td>\n",
+       "      <td>0.004 (+/- 0.004)</td>\n",
        "      <td>0.002 (+/- 0.004)</td>\n",
        "      <td>0.616 (+/- 0.003)</td>\n",
        "      <td>0.616 (+/- 0.001)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>decision tree</th>\n",
-       "      <td>0.044 (+/- 0.008)</td>\n",
-       "      <td>0.019 (+/- 0.003)</td>\n",
+       "      <td>0.032 (+/- 0.006)</td>\n",
+       "      <td>0.014 (+/- 0.008)</td>\n",
        "      <td>0.810 (+/- 0.028)</td>\n",
-       "      <td>0.847 (+/- 0.009)</td>\n",
+       "      <td>0.847 (+/- 0.008)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNN</th>\n",
-       "      <td>0.029 (+/- 0.018)</td>\n",
-       "      <td>0.027 (+/- 0.015)</td>\n",
+       "      <td>0.030 (+/- 0.015)</td>\n",
+       "      <td>0.032 (+/- 0.017)</td>\n",
        "      <td>0.806 (+/- 0.019)</td>\n",
        "      <td>0.833 (+/- 0.008)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Forest</th>\n",
-       "      <td>0.024 (+/- 0.008)</td>\n",
-       "      <td>0.009 (+/- 0.009)</td>\n",
-       "      <td>0.809 (+/- 0.043)</td>\n",
-       "      <td>0.838 (+/- 0.012)</td>\n",
+       "      <td>0.043 (+/- 0.015)</td>\n",
+       "      <td>0.013 (+/- 0.006)</td>\n",
+       "      <td>0.823 (+/- 0.032)</td>\n",
+       "      <td>0.841 (+/- 0.006)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -693,19 +752,19 @@
       ],
       "text/plain": [
        "                          fit_time         score_time         test_score  \\\n",
-       "dummy            0.002 (+/- 0.004)  0.002 (+/- 0.004)  0.616 (+/- 0.003)   \n",
-       "decision tree    0.044 (+/- 0.008)  0.019 (+/- 0.003)  0.810 (+/- 0.028)   \n",
-       "KNN              0.029 (+/- 0.018)  0.027 (+/- 0.015)  0.806 (+/- 0.019)   \n",
-       "Decision Forest  0.024 (+/- 0.008)  0.009 (+/- 0.009)  0.809 (+/- 0.043)   \n",
+       "dummy            0.004 (+/- 0.004)  0.002 (+/- 0.004)  0.616 (+/- 0.003)   \n",
+       "decision tree    0.032 (+/- 0.006)  0.014 (+/- 0.008)  0.810 (+/- 0.028)   \n",
+       "KNN              0.030 (+/- 0.015)  0.032 (+/- 0.017)  0.806 (+/- 0.019)   \n",
+       "Decision Forest  0.043 (+/- 0.015)  0.013 (+/- 0.006)  0.823 (+/- 0.032)   \n",
        "\n",
        "                       train_score  \n",
        "dummy            0.616 (+/- 0.001)  \n",
-       "decision tree    0.847 (+/- 0.009)  \n",
+       "decision tree    0.847 (+/- 0.008)  \n",
        "KNN              0.833 (+/- 0.008)  \n",
-       "Decision Forest  0.838 (+/- 0.012)  "
+       "Decision Forest  0.841 (+/- 0.006)  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +893,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,10 +904,6 @@
     "tree.fit(X, y)\n",
     "tree_predicted = tree.predict(test_df)\n",
     "\n",
-    "results_dict[\"decision_tree\"] = mean_std_cross_val_scores(\n",
-    "    tree, X, y, return_train_score=True\n",
-    ")\n",
-    "\n",
     "tree_submit_df = pd.DataFrame({'PassengerId': test_df['PassengerId'], 'Survived': tree_predicted})\n",
     "tree_submit_df.to_csv('tree_submission.csv', index=False)\n",
     "tree_submit_df"
@@ -856,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +1017,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,11 +1026,6 @@
     "\n",
     "knn = make_pipeline(preprocessor, KNeighborsClassifier(n_neighbors=10))\n",
     "knn.fit(X, y)\n",
-    "\n",
-    "results_dict[\"kNN\"] = mean_std_cross_val_scores(\n",
-    "    knn, X, y, return_train_score=True\n",
-    ")\n",
-    "\n",
     "knn_predicted = knn.predict(test_df)\n",
     "\n",
     "knn_submit_df = pd.DataFrame({'PassengerId': test_df['PassengerId'], 'Survived': knn_predicted})\n",
@@ -985,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1141,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,131 +1149,11 @@
    "source": [
     "decision_forest = make_pipeline(preprocessor, RandomForestClassifier(max_depth=5))\n",
     "decision_forest.fit(X, y)\n",
-    "\n",
-    "results_dict[\"dec_forest\"] = mean_std_cross_val_scores(\n",
-    "    decision_forest, X, y, return_train_score=True\n",
-    ")\n",
-    "\n",
     "decision_forest_predicted = decision_forest.predict(test_df)\n",
     "\n",
     "decision_forest_submit_df = pd.DataFrame({'PassengerId': test_df['PassengerId'], 'Survived': decision_forest_predicted})\n",
     "decision_forest_submit_df.to_csv('decision_forest_submission.csv', index=False)\n",
     "decision_forest_submit_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fit_time</th>\n",
-       "      <th>score_time</th>\n",
-       "      <th>test_score</th>\n",
-       "      <th>train_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>dummy</th>\n",
-       "      <td>0.002 (+/- 0.004)</td>\n",
-       "      <td>0.002 (+/- 0.004)</td>\n",
-       "      <td>0.616 (+/- 0.003)</td>\n",
-       "      <td>0.616 (+/- 0.001)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>decision tree</th>\n",
-       "      <td>0.044 (+/- 0.008)</td>\n",
-       "      <td>0.019 (+/- 0.003)</td>\n",
-       "      <td>0.810 (+/- 0.028)</td>\n",
-       "      <td>0.847 (+/- 0.009)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KNN</th>\n",
-       "      <td>0.029 (+/- 0.018)</td>\n",
-       "      <td>0.027 (+/- 0.015)</td>\n",
-       "      <td>0.806 (+/- 0.019)</td>\n",
-       "      <td>0.833 (+/- 0.008)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decision Forest</th>\n",
-       "      <td>0.024 (+/- 0.008)</td>\n",
-       "      <td>0.009 (+/- 0.009)</td>\n",
-       "      <td>0.809 (+/- 0.043)</td>\n",
-       "      <td>0.838 (+/- 0.012)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>decision_tree</th>\n",
-       "      <td>0.025 (+/- 0.011)</td>\n",
-       "      <td>0.013 (+/- 0.008)</td>\n",
-       "      <td>0.810 (+/- 0.028)</td>\n",
-       "      <td>0.847 (+/- 0.009)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>kNN</th>\n",
-       "      <td>0.030 (+/- 0.009)</td>\n",
-       "      <td>0.029 (+/- 0.018)</td>\n",
-       "      <td>0.806 (+/- 0.019)</td>\n",
-       "      <td>0.833 (+/- 0.008)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dec_forest</th>\n",
-       "      <td>0.185 (+/- 0.063)</td>\n",
-       "      <td>0.016 (+/- 0.002)</td>\n",
-       "      <td>0.825 (+/- 0.029)</td>\n",
-       "      <td>0.848 (+/- 0.006)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          fit_time         score_time         test_score  \\\n",
-       "dummy            0.002 (+/- 0.004)  0.002 (+/- 0.004)  0.616 (+/- 0.003)   \n",
-       "decision tree    0.044 (+/- 0.008)  0.019 (+/- 0.003)  0.810 (+/- 0.028)   \n",
-       "KNN              0.029 (+/- 0.018)  0.027 (+/- 0.015)  0.806 (+/- 0.019)   \n",
-       "Decision Forest  0.024 (+/- 0.008)  0.009 (+/- 0.009)  0.809 (+/- 0.043)   \n",
-       "decision_tree    0.025 (+/- 0.011)  0.013 (+/- 0.008)  0.810 (+/- 0.028)   \n",
-       "kNN              0.030 (+/- 0.009)  0.029 (+/- 0.018)  0.806 (+/- 0.019)   \n",
-       "dec_forest       0.185 (+/- 0.063)  0.016 (+/- 0.002)  0.825 (+/- 0.029)   \n",
-       "\n",
-       "                       train_score  \n",
-       "dummy            0.616 (+/- 0.001)  \n",
-       "decision tree    0.847 (+/- 0.009)  \n",
-       "KNN              0.833 (+/- 0.008)  \n",
-       "Decision Forest  0.838 (+/- 0.012)  \n",
-       "decision_tree    0.847 (+/- 0.009)  \n",
-       "kNN              0.833 (+/- 0.008)  \n",
-       "dec_forest       0.848 (+/- 0.006)  "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame(results_dict).T"
    ]
   },
   {
@@ -1242,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
