Added something I removed by accident

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1160,6 +1160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_Type your answer here, replacing this text._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<!-- BEGIN QUESTION -->\n",
     "\n",
     "## 9. Feature selection <a name=\"9\"></a>\n",
