--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "4    30-40    False  False           True  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "    <tr>\n",
        "      <th>dummy</th>\n",
        "      <td>0.001 (+/- 0.000)</td>\n",
-       "      <td>0.001 (+/- 0.001)</td>\n",
+       "      <td>0.000 (+/- 0.001)</td>\n",
        "      <td>0.616 (+/- 0.003)</td>\n",
        "      <td>0.616 (+/- 0.001)</td>\n",
        "    </tr>\n",
@@ -905,13 +905,13 @@
       ],
       "text/plain": [
        "                fit_time         score_time         test_score   \n",
-       "dummy  0.001 (+/- 0.000)  0.001 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
+       "dummy  0.001 (+/- 0.000)  0.000 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
        "\n",
        "             train_score  \n",
        "dummy  0.616 (+/- 0.001)  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1150,59 +1150,70 @@
        "    <tr>\n",
        "      <th>dummy</th>\n",
        "      <td>0.001 (+/- 0.000)</td>\n",
-       "      <td>0.001 (+/- 0.001)</td>\n",
+       "      <td>0.000 (+/- 0.001)</td>\n",
        "      <td>0.616 (+/- 0.003)</td>\n",
        "      <td>0.616 (+/- 0.001)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>decision_tree</th>\n",
-       "      <td>0.016 (+/- 0.001)</td>\n",
-       "      <td>0.007 (+/- 0.000)</td>\n",
-       "      <td>0.802 (+/- 0.021)</td>\n",
+       "      <td>0.018 (+/- 0.002)</td>\n",
+       "      <td>0.008 (+/- 0.001)</td>\n",
+       "      <td>0.804 (+/- 0.022)</td>\n",
        "      <td>0.851 (+/- 0.009)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNN</th>\n",
-       "      <td>0.017 (+/- 0.004)</td>\n",
-       "      <td>0.040 (+/- 0.034)</td>\n",
+       "      <td>0.017 (+/- 0.002)</td>\n",
+       "      <td>0.024 (+/- 0.004)</td>\n",
        "      <td>0.817 (+/- 0.016)</td>\n",
        "      <td>0.834 (+/- 0.006)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>decision_forest</th>\n",
-       "      <td>0.027 (+/- 0.002)</td>\n",
-       "      <td>0.007 (+/- 0.000)</td>\n",
-       "      <td>0.823 (+/- 0.013)</td>\n",
-       "      <td>0.854 (+/- 0.007)</td>\n",
+       "      <th>random_forest</th>\n",
+       "      <td>0.028 (+/- 0.002)</td>\n",
+       "      <td>0.008 (+/- 0.001)</td>\n",
+       "      <td>0.773 (+/- 0.039)</td>\n",
+       "      <td>0.815 (+/- 0.027)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>0.027 (+/- 0.001)</td>\n",
+       "      <td>0.010 (+/- 0.001)</td>\n",
+       "      <td>0.838 (+/- 0.029)</td>\n",
+       "      <td>0.844 (+/- 0.007)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          fit_time         score_time         test_score   \n",
-       "dummy            0.001 (+/- 0.000)  0.001 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
-       "decision_tree    0.016 (+/- 0.001)  0.007 (+/- 0.000)  0.802 (+/- 0.021)   \n",
-       "KNN              0.017 (+/- 0.004)  0.040 (+/- 0.034)  0.817 (+/- 0.016)   \n",
-       "decision_forest  0.027 (+/- 0.002)  0.007 (+/- 0.000)  0.823 (+/- 0.013)   \n",
+       "                        fit_time         score_time         test_score   \n",
+       "dummy          0.001 (+/- 0.000)  0.000 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
+       "decision_tree  0.018 (+/- 0.002)  0.008 (+/- 0.001)  0.804 (+/- 0.022)   \n",
+       "KNN            0.017 (+/- 0.002)  0.024 (+/- 0.004)  0.817 (+/- 0.016)   \n",
+       "random_forest  0.028 (+/- 0.002)  0.008 (+/- 0.001)  0.773 (+/- 0.039)   \n",
+       "SVM            0.027 (+/- 0.001)  0.010 (+/- 0.001)  0.838 (+/- 0.029)   \n",
        "\n",
-       "                       train_score  \n",
-       "dummy            0.616 (+/- 0.001)  \n",
-       "decision_tree    0.851 (+/- 0.009)  \n",
-       "KNN              0.834 (+/- 0.006)  \n",
-       "decision_forest  0.854 (+/- 0.007)  "
+       "                     train_score  \n",
+       "dummy          0.616 (+/- 0.001)  \n",
+       "decision_tree  0.851 (+/- 0.009)  \n",
+       "KNN            0.834 (+/- 0.006)  \n",
+       "random_forest  0.815 (+/- 0.027)  \n",
+       "SVM            0.844 (+/- 0.007)  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.svm import SVC\n",
     "models = { # Arbitrary hyperparameters, for now\n",
     "    \"decision_tree\": DecisionTreeClassifier(max_depth=5), \n",
     "    \"KNN\": KNeighborsClassifier(n_neighbors=10),\n",
-    "    \"decision_forest\": RandomForestClassifier(max_depth=5, n_estimators=10, max_features=9),\n",
+    "    \"random_forest\": RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
+    "    \"SVM\": SVC()\n",
     "}\n",
     "\n",
     "for name, model in models.items():\n",
@@ -1241,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
