Division by zero fix

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
     "    x=age_groups, y=train_df['Survived'],\n",
     "    palette=\"Reds_d\", hue=age_groups,\n",
     "    legend=False,\n",
-    "    estimator=lambda x: sum(x) / len(x) * 100,\n",
+    "    estimator=lambda x: sum(x) / len(x) * 100 if len(x) > 0 else 0,\n",
     "    errorbar=None\n",
     ")\n",
     "plt.title('Survival Rate by Age Group')\n",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
     "    x=decks, y=train_df['Survived'],\n",
     "    palette=\"Reds_d\", hue=decks,\n",
     "    legend=False,\n",
-    "    estimator=lambda x: sum(x) / len(x) * 100,\n",
+    "    estimator=lambda x: sum(x) / len(x) * 100 if len(x) > 0 else 0,\n",
     "    errorbar=None\n",
     ")\n",
     "plt.title('Survival Rate by Deck')\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "4    30-40    False  False           True  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -894,8 +894,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>dummy</th>\n",
-       "      <td>0.001 (+/- 0.000)</td>\n",
-       "      <td>0.000 (+/- 0.001)</td>\n",
+       "      <td>0.001 (+/- 0.001)</td>\n",
+       "      <td>0.000 (+/- 0.000)</td>\n",
        "      <td>0.616 (+/- 0.003)</td>\n",
        "      <td>0.616 (+/- 0.001)</td>\n",
        "    </tr>\n",
@@ -905,13 +905,13 @@
       ],
       "text/plain": [
        "                fit_time         score_time         test_score   \n",
-       "dummy  0.001 (+/- 0.000)  0.000 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
+       "dummy  0.001 (+/- 0.001)  0.000 (+/- 0.000)  0.616 (+/- 0.003)  \\\n",
        "\n",
        "             train_score  \n",
        "dummy  0.616 (+/- 0.001)  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1149,36 +1149,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>dummy</th>\n",
-       "      <td>0.001 (+/- 0.000)</td>\n",
-       "      <td>0.000 (+/- 0.001)</td>\n",
+       "      <td>0.001 (+/- 0.001)</td>\n",
+       "      <td>0.000 (+/- 0.000)</td>\n",
        "      <td>0.616 (+/- 0.003)</td>\n",
        "      <td>0.616 (+/- 0.001)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>decision_tree</th>\n",
-       "      <td>0.018 (+/- 0.002)</td>\n",
-       "      <td>0.008 (+/- 0.001)</td>\n",
-       "      <td>0.804 (+/- 0.022)</td>\n",
+       "      <td>0.019 (+/- 0.001)</td>\n",
+       "      <td>0.010 (+/- 0.004)</td>\n",
+       "      <td>0.802 (+/- 0.021)</td>\n",
        "      <td>0.851 (+/- 0.009)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNN</th>\n",
-       "      <td>0.017 (+/- 0.002)</td>\n",
-       "      <td>0.024 (+/- 0.004)</td>\n",
+       "      <td>0.018 (+/- 0.002)</td>\n",
+       "      <td>0.022 (+/- 0.002)</td>\n",
        "      <td>0.817 (+/- 0.016)</td>\n",
        "      <td>0.834 (+/- 0.006)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>random_forest</th>\n",
-       "      <td>0.028 (+/- 0.002)</td>\n",
-       "      <td>0.008 (+/- 0.001)</td>\n",
-       "      <td>0.773 (+/- 0.039)</td>\n",
-       "      <td>0.815 (+/- 0.027)</td>\n",
+       "      <td>0.033 (+/- 0.003)</td>\n",
+       "      <td>0.009 (+/- 0.001)</td>\n",
+       "      <td>0.815 (+/- 0.026)</td>\n",
+       "      <td>0.836 (+/- 0.015)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVM</th>\n",
-       "      <td>0.027 (+/- 0.001)</td>\n",
-       "      <td>0.010 (+/- 0.001)</td>\n",
+       "      <td>0.030 (+/- 0.003)</td>\n",
+       "      <td>0.011 (+/- 0.002)</td>\n",
        "      <td>0.838 (+/- 0.029)</td>\n",
        "      <td>0.844 (+/- 0.007)</td>\n",
        "    </tr>\n",
@@ -1188,21 +1188,21 @@
       ],
       "text/plain": [
        "                        fit_time         score_time         test_score   \n",
-       "dummy          0.001 (+/- 0.000)  0.000 (+/- 0.001)  0.616 (+/- 0.003)  \\\n",
-       "decision_tree  0.018 (+/- 0.002)  0.008 (+/- 0.001)  0.804 (+/- 0.022)   \n",
-       "KNN            0.017 (+/- 0.002)  0.024 (+/- 0.004)  0.817 (+/- 0.016)   \n",
-       "random_forest  0.028 (+/- 0.002)  0.008 (+/- 0.001)  0.773 (+/- 0.039)   \n",
-       "SVM            0.027 (+/- 0.001)  0.010 (+/- 0.001)  0.838 (+/- 0.029)   \n",
+       "dummy          0.001 (+/- 0.001)  0.000 (+/- 0.000)  0.616 (+/- 0.003)  \\\n",
+       "decision_tree  0.019 (+/- 0.001)  0.010 (+/- 0.004)  0.802 (+/- 0.021)   \n",
+       "KNN            0.018 (+/- 0.002)  0.022 (+/- 0.002)  0.817 (+/- 0.016)   \n",
+       "random_forest  0.033 (+/- 0.003)  0.009 (+/- 0.001)  0.815 (+/- 0.026)   \n",
+       "SVM            0.030 (+/- 0.003)  0.011 (+/- 0.002)  0.838 (+/- 0.029)   \n",
        "\n",
        "                     train_score  \n",
        "dummy          0.616 (+/- 0.001)  \n",
        "decision_tree  0.851 (+/- 0.009)  \n",
        "KNN            0.834 (+/- 0.006)  \n",
-       "random_forest  0.815 (+/- 0.027)  \n",
+       "random_forest  0.836 (+/- 0.015)  \n",
        "SVM            0.844 (+/- 0.007)  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
