--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1110,7 +1110,7 @@
     "\n",
     "df['Sex'] = df['Sex'].map({'male': 1, 'female': 0})\n",
     "\n",
-    "\n",
+    "target = \"Survived\"\n",
     "XL = df[[\"Fare\"]]\n",
     "yL = train_df[target]\n",
     "\n",
