--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -95,7 +95,7 @@
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import make_column_transformer\n",
@@ -1262,7 +1262,8 @@
     "    \"decision_tree\": DecisionTreeClassifier(max_depth=5), \n",
     "    \"KNN\": KNeighborsClassifier(n_neighbors=10),\n",
     "    \"random_forest\": RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
-    "    \"SVM\": SVC()\n",
+    "    \"SVM\": SVC(),\n",
+    "    \"voting\" : VotingClassifier(estimators=[('dt', DecisionTreeClassifier(max_depth=5)), ('knn', KNeighborsClassifier(n_neighbors=10)), ('rf', RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1)), ('svm', SVC())], voting='hard')\n",
     "}\n",
     "\n",
     "for name, model in models.items():\n",
