--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1415,13 +1415,19 @@
    ],
    "source": [
     "from sklearn.svm import SVC\n",
+    "dt = DecisionTreeClassifier(max_depth=5)\n",
+    "knn = KNeighborsClassifier(n_neighbors=10)\n",
+    "rf = RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1)\n",
+    "svm = SVC()\n",
+    "vote = VotingClassifier(estimators=[('dt', dt), ('knn', knn), ('rf', rf), ('svm', svm)], voting='hard')\n",
+    "lr = LinearRegression()\n",
     "models = { # Arbitrary hyperparameters, for now\n",
-    "    \"decision_tree\": DecisionTreeClassifier(max_depth=5), \n",
-    "    \"KNN\": KNeighborsClassifier(n_neighbors=10),\n",
-    "    \"random_forest\": RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
-    "    \"SVM\": SVC(),\n",
-    "    \"voting\" : VotingClassifier(estimators=[('dt', DecisionTreeClassifier(max_depth=5)), ('knn', KNeighborsClassifier(n_neighbors=10)), ('rf', RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1)), ('svm', SVC())], voting='hard')\n",
-    "    \"LinearRegression\": LinearRegression()\n",
+    "    \"decision_tree\": dt,\n",
+    "    \"KNN\": knn,\n",
+    "    \"random_forest\": rf,\n",
+    "    \"SVM\": svm,\n",
+    "    \"voting\" : vote,\n",
+    "    \"LinearRegression\": lr,\n",
     "}\n",
     "\n",
     "for name, model in models.items():\n",
